updated topup forms and validations fix minor issues with card name not showing

--- a/src/css/elements/forms.css
+++ b/src/css/elements/forms.css
@@ -1,12 +1,13 @@
 input:not([type="submit"], [type="button"], [type="radio"], [type="checkbox"]) {
     height: 2em;
-    width: fit-content;
-    padding: 0 0.8em;
-    margin-bottom: 1rem;
-    margin-left: 0rem;
+    width: 60%;
+    margin-bottom: 1em;
+    padding-left: 0.7em;
+    margin-left: 0em;
     border: 1px solid #ddd;
     border-radius: var(--border-radius-small);
     outline: none;
+    text-align: left;
 }
 
 input[type="radio"] {
@@ -31,7 +32,7 @@ form {
 .form-group {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: left;
     align-items: left;
 }
 
